--- a/AstalonBoundaryRemoval/.github/workflows/workflow.yml
+++ b/AstalonBoundaryRemoval/.github/workflows/workflow.yml
@@ -27,7 +27,11 @@ jobs:
     - uses: actions/setup-dotnet@v1
       with: 
         dotnet-version: '6.0.x'
-    - run: dotnet build -c Release -o bin/AstalonBoundaryRemoval
+    - run: echo "::set-output name=URL::$(curl -vs https://builds.bepinex.dev/projects/bepinex_be 2>&1 | grep -Po '(?<=href=")(\/projects\/bepinex_be\/(.*)\/BepInEx_UnityIL2CPP_x86(.*))(?=")' | head -1)"
+      id: bepinexurl
+    - run: wget https://builds.bepinex.dev${{ steps.bepinexurl.outputs.URL}}
+    - run: unzip BepInEx* -d bin/AstalonBoundaryRemoval
+    - run: dotnet build -c Release -o bin/AstalonBoundaryRemoval/BepInEx/plugins/PhantomGamers-AstalonBoundaryRemoval
     - run: zip -r AstalonBoundaryRemoval.zip bin/AstalonBoundaryRemoval
     - uses: ncipollo/release-action@v1
       with:
